--- a/src/components/menu-bar/MenuBar.module.css
+++ b/src/components/menu-bar/MenuBar.module.css
@@ -1,4 +1,4 @@
-.sidebar {
+.menubar {
   width: 350px;
   background-color: #f7f5f1;
   display: flex;
@@ -18,7 +18,7 @@
   margin-left: 100px;
 }
 
-.sidebarButton {
+.menubarButton {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -32,7 +32,7 @@
   transition: all 0.2s ease;
 }
 
-.sidebarButton:hover {
+.menubarButton:hover {
   background-color: #e6e1da;
 }
 
