--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -2,4 +2,8 @@
   max-width: 600px;
   margin: 0 auto;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
 }
