--- a/src/components/base-components/polaroid/Polaroid.css
+++ b/src/components/base-components/polaroid/Polaroid.css
@@ -1,5 +1,5 @@
 .polaroid {
-  background: var(--white-bg);
+  background: white;
   /* padding: 7px 7px 24px 7px; */
   padding-top: 7px; 
   display: flex;
@@ -32,5 +32,5 @@
   text-align: center;
   font-family: 'Indie Flower', cursive;
   font-size: 8px;
-  color: var(--text-color);
+  color: #333;
 }
