Revert "Revert "Pull Request: Backend Integration + Events Feature + UI Refactor""

--- a/src/components/menu-bar/MenuBar.module.css
+++ b/src/components/menu-bar/MenuBar.module.css
@@ -1,4 +1,4 @@
-.sidebar {
+.menubar {
   width: 350px;
   background-color: #f7f5f1;
   display: flex;
@@ -18,10 +18,10 @@
   margin-left: 100px;
 }
 
-.sidebarButton {
+.menubarButton {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 12px;
   font-size: 17px;
   text-decoration: none;
   color: black;
@@ -29,10 +29,15 @@
   padding: 9px 15px;
   border-radius: 6px;
   font-weight: 500;
-  transition: all 0.2s ease;
+  transition: background-color 0.2s ease;
 }
 
-.sidebarButton:hover {
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
+.menubarButton:hover {
   background-color: #e6e1da;
 }
 
