--- a/src/components/profile-header/ProfileAvatar.css
+++ b/src/components/profile-header/ProfileAvatar.css
@@ -1,6 +1,6 @@
 .profile-avatar {
-  width: 96px;
-  height: 96px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  border-radius: 50%;
 }
