--- a/src/components/menu-bar/MenuBar.module.css
+++ b/src/components/menu-bar/MenuBar.module.css
@@ -1,10 +1,11 @@
 .menubar {
-  width: 350px;
+  width: 270px;
   background-color: #f7f5f1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px;
+  /* padding: 20px; */
+  padding-right: 20px;
   border-right: 1px solid #ebe8df;
   box-sizing: border-box;
 }
@@ -14,8 +15,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-top: 20px;
-  margin-left: 100px;
+  margin-top: 30px;
 }
 
 .menubarButton {
@@ -26,7 +26,7 @@
   text-decoration: none;
   color: black;
   background-color: white;
-  padding: 9px 15px;
+  padding: 12px 15px;
   border-radius: 6px;
   font-weight: 500;
   transition: background-color 0.2s ease;
@@ -51,7 +51,7 @@
   flex-direction: column;
   gap: 15px;
   margin-top: auto;
-  margin-left: 100px;
+  /* margin-left: 100px; */
 }
 
 /* User info card */
